--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculators</title>
-    <link rel="stylesheet" href="/1. project.Calculators/asset/css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="calculators">
@@ -45,6 +45,6 @@
             
     </div>
 
-    <script src="/1. project.Calculators/asset/js/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
